--- a/frontend/modules/user/profile/profile.css
+++ b/frontend/modules/user/profile/profile.css
@@ -3,6 +3,7 @@ body {
   font-family: 'Segoe UI', sans-serif;
   background: linear-gradient(to bottom right, #f3e8ff, #ffffff);
   color: #4c1d95;
+  
 }
 
 /* Ajuste para que el navbar no tape el contenido */
@@ -56,7 +57,7 @@ body {
   border-radius: 9999px;
   cursor: pointer;
   font-weight: bold;
-  background-color: #9333ea;
+  background-color: #6b21a8;
   color: white;
   margin-bottom: 0;
 }
